# SmartCar

./: .gitattributes  README.md
autonomous/: autonomous.py  autonomousCar.py  fastPerceptionNN.py  motorControl.py  motorFunctionality.py  occupancyMapTransormations.py  occupancyNode.py  pathPlanningAlgo.py  testing.py
autonomous/misc/: fastPerceptionNN.py  motorControl.py  notes  occupancyMapTransformations.py  roughAutonomous.py
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/rcProjPkg/: data_msg.h  motor_controls_msg.h
devel/lib/pkgconfig/: rcProjPkg.pc
devel/lib/python2.7/dist-packages/rcProjPkg/msg/: __init__.py  _data_msg.py  _motor_controls_msg.py
devel/lib/rcProjPkg/: controllerData  joystickProcessing  motorControls  vidRead  vidStream
devel/share/common-lisp/ros/rcProjPkg/msg/: _package.lisp  _package_data_msg.lisp  _package_motor_controls_msg.lisp  data_msg.lisp  motor_controls_msg.lisp  rcProjPkg-msg.asd
devel/share/gennodejs/ros/rcProjPkg/msg/: _index.js  data_msg.js  motor_controls_msg.js
devel/share/rcProjPkg/cmake/: rcProjPkg-msg-extras.cmake  rcProjPkg-msg-paths.cmake  rcProjPkgConfig.cmake
devel/share/roseus/ros/rcProjPkg/: manifest.l
devel/share/roseus/ros/rcProjPkg/msg/: data_msg.l  motor_controls_msg.l
src/rcProjPkg/: CMakeLists.txt
src/rcProjPkg/include/rcProjPkg/: controller.h  joystickProcessing.h  motorControls.h
src/rcProjPkg/msg/: motor_controls_msg.msg
src/rcProjPkg/src/: arduino.cpp  controller.cpp  joystickProcessing.cpp  motorControls.cpp  vid_receiver.cpp  video_stream.cpp
